--- a/dubbo/pom.xml
+++ b/dubbo/pom.xml
@@ -16,9 +16,15 @@
     <description>dubbo</description>
     <properties>
         <java.version>17</java.version>
-        <dubbo.version>3.2.7</dubbo.version>
+        <dubbo.version>3.2.10</dubbo.version>
         <spring-boot.version>3.1.5</spring-boot.version>
     </properties>
+    <repositories>
+        <repository>
+            <id>aliyun</id>
+            <url>https://maven.aliyun.com/repository/public</url>
+        </repository>
+    </repositories>
 
     <modules>
         <module>provider</module>
